Fixed heights of contact and employment components on mobile screen size

--- a/src/styles/themes/_contact.sass
+++ b/src/styles/themes/_contact.sass
@@ -50,7 +50,7 @@
 
 @media screen and (max-width: 1030px)
     #contact
-        margin: 0
+        margin-top: 10%
         height: auto
         width: 90%
         padding-bottom: 10%
@@ -76,7 +76,7 @@
 
 @media screen and (max-width: 600px)
     #contact
-        margin: 0
+        margin-top: 40%
         height: auto
         width: 70%
         .contact-content
