--- a/src/styles/themes/_employment.sass
+++ b/src/styles/themes/_employment.sass
@@ -66,7 +66,7 @@
 
 @media screen and (max-width: 1030px)
     #employment
-        min-height: auto
+        height: auto
         padding-top: 15%
         .employment-content
             margin-top: 5%
@@ -112,7 +112,7 @@
 
 @media screen and (max-width: 600px)
     #employment
-        min-height: 90vh
+        height: auto
         padding-top: 25%
         .employment-content
             .employment-thumbnails
